--- a/.github/workflows/pack-multi-platform.yml
+++ b/.github/workflows/pack-multi-platform.yml
@@ -118,14 +118,21 @@ jobs:
           if-no-files-found: error
 
       - name: Publish to NuGet
-        if: startsWith(github.ref, 'refs/tags/') && secrets.NUGET_API_KEY != ''
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: |
+          if [[ -z "${NUGET_API_KEY}" ]]; then
+            echo "NUGET_API_KEY is not set; skipping publish."
+            exit 0
+          fi
+
           dotnet nuget push artifacts/*.nupkg \
-            --api-key "${{ secrets.NUGET_API_KEY }}" \
+            --api-key "${NUGET_API_KEY}" \
             --source https://api.nuget.org/v3/index.json \
             --skip-duplicate
 
           dotnet nuget push artifacts/*.snupkg \
-            --api-key "${{ secrets.NUGET_API_KEY }}" \
+            --api-key "${NUGET_API_KEY}" \
             --source https://api.nuget.org/v3/index.json \
             --skip-duplicate
