--- a/.github/workflows/pack-multi-platform.yml
+++ b/.github/workflows/pack-multi-platform.yml
@@ -19,24 +19,40 @@ jobs:
         include:
           - os: ubuntu-latest
             rid: linux-x64
+            cmake_extra_args: ""
             expected_binary: native/runtimes/linux-x64/native/libzireael.so
-          - os: macos-13
+          - os: macos-14
             rid: osx-x64
+            cmake_extra_args: "-DCMAKE_OSX_ARCHITECTURES=x86_64"
             expected_binary: native/runtimes/osx-x64/native/libzireael.dylib
           - os: macos-14
             rid: osx-arm64
+            cmake_extra_args: ""
             expected_binary: native/runtimes/osx-arm64/native/libzireael.dylib
           - os: windows-latest
             rid: win-x64
+            cmake_extra_args: ""
             expected_binary: native/runtimes/win-x64/native/zireael.dll
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Fetch upstream Zireael source
+        shell: bash
+        env:
+          ZIREAEL_UPSTREAM_REF: v1.3.8
+        run: |
+          git clone --depth 1 --branch "${ZIREAEL_UPSTREAM_REF}" \
+            https://github.com/RtlZeroMemory/Zireael.git \
+            upstream-zireael
+
       - name: Build native runtime binary
         shell: bash
-        run: ./eng/build-native.sh
+        env:
+          ZIREAEL_RUNTIME_ID: ${{ matrix.rid }}
+          ZIREAEL_CMAKE_EXTRA_ARGS: ${{ matrix.cmake_extra_args }}
+        run: ./eng/build-native.sh ./upstream-zireael
 
       - name: Verify staged runtime asset
         shell: bash
