--- a/.github/workflows/pack-multi-platform.yml
+++ b/.github/workflows/pack-multi-platform.yml
@@ -19,47 +19,78 @@ jobs:
         include:
           - os: ubuntu-latest
             rid: linux-x64
-            cmake_extra_args: ""
+            cmake_extra_args: "-G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang"
             expected_binary: native/runtimes/linux-x64/native/libzireael.so
           - os: macos-14
             rid: osx-x64
-            cmake_extra_args: "-DCMAKE_OSX_ARCHITECTURES=x86_64"
+            cmake_extra_args: "-G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_OSX_ARCHITECTURES=x86_64"
             expected_binary: native/runtimes/osx-x64/native/libzireael.dylib
           - os: macos-14
             rid: osx-arm64
-            cmake_extra_args: ""
+            cmake_extra_args: "-G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_OSX_ARCHITECTURES=arm64"
             expected_binary: native/runtimes/osx-arm64/native/libzireael.dylib
           - os: windows-latest
             rid: win-x64
-            cmake_extra_args: ""
+            cmake_extra_args: "-G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang-cl"
             expected_binary: native/runtimes/win-x64/native/zireael.dll
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install toolchain (Linux)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y clang cmake ninja-build
+
+      - name: Install toolchain (macOS)
+        if: runner.os == 'macOS'
+        run: brew install ninja
+
+      - name: Install toolchain (Windows)
+        if: runner.os == 'Windows'
+        run: choco install ninja --no-progress -y
+
+      - name: MSVC dev cmd (Windows)
+        if: runner.os == 'Windows'
+        uses: ilammy/msvc-dev-cmd@v1
+
       - name: Fetch upstream Zireael source
         shell: bash
         env:
           ZIREAEL_UPSTREAM_REF: v1.3.8
         run: |
+          UPSTREAM_DIR="$(pwd)/upstream-zireael-src"
+          rm -rf "${UPSTREAM_DIR}"
           git clone --depth 1 --branch "${ZIREAEL_UPSTREAM_REF}" \
             https://github.com/RtlZeroMemory/Zireael.git \
-            upstream-zireael
+            "${UPSTREAM_DIR}"
+          echo "ZIREAEL_UPSTREAM_DIR=${UPSTREAM_DIR}" >> "${GITHUB_ENV}"
+
+      - name: Patch upstream atomic function pointer init (clang compatibility)
+        shell: bash
+        run: |
+          perl -0pi -e 's/static _Atomic\(zr_assert_cleanup_hook_t\) g_zr_assert_cleanup_hook = NULL;/static _Atomic(zr_assert_cleanup_hook_t) g_zr_assert_cleanup_hook = 0;/' \
+            "${ZIREAEL_UPSTREAM_DIR}/src/util/zr_assert.c"
+          perl -0pi -e 's/atomic_compare_exchange_strong_explicit\(&g_zr_assert_cleanup_hook, &expected, NULL,/atomic_compare_exchange_strong_explicit\(&g_zr_assert_cleanup_hook, &expected, \(zr_assert_cleanup_hook_t\)0,/g' \
+            "${ZIREAEL_UPSTREAM_DIR}/src/util/zr_assert.c"
+          if [[ "${RUNNER_OS}" == "Windows" ]]; then
+            perl -0pi -e 's/#endif \/\* ZR_UTIL_ZR_MACROS_H_INCLUDED \*\//\n#if defined(_MSC_VER) \&\& !defined(__clang__)\n#undef ZR_ARRAYLEN\n#define ZR_ARRAYLEN(arr) (sizeof(arr) \/ sizeof((arr)[0]))\n#endif\n\n#endif \/\* ZR_UTIL_ZR_MACROS_H_INCLUDED \*\//s' \
+              "${ZIREAEL_UPSTREAM_DIR}/src/util/zr_macros.h"
+          fi
 
       - name: Build native runtime binary
         shell: bash
         env:
           ZIREAEL_RUNTIME_ID: ${{ matrix.rid }}
           ZIREAEL_CMAKE_EXTRA_ARGS: ${{ matrix.cmake_extra_args }}
-        run: ./eng/build-native.sh ./upstream-zireael
+        run: ./eng/build-native.sh "${ZIREAEL_UPSTREAM_DIR}"
 
       - name: Verify staged runtime asset
         shell: bash
         run: |
           if [[ ! -f "${{ matrix.expected_binary }}" ]]; then
             echo "Missing expected binary: ${{ matrix.expected_binary }}" >&2
-            find native -maxdepth 5 -type f || true
+            find native -type f || true
             exit 1
           fi
 
