--- a/.github/workflows/pack-multi-platform.yml
+++ b/.github/workflows/pack-multi-platform.yml
@@ -2,6 +2,16 @@ name: Pack Multi-Platform NuGet
 
 on:
   workflow_dispatch:
+    inputs:
+      package_version:
+        description: "NuGet package version override (for example 0.1.0-alpha.2)"
+        required: false
+        type: string
+      publish_to_nuget:
+        description: "Publish to NuGet.org on manual runs"
+        required: true
+        default: false
+        type: boolean
   push:
     tags:
       - 'v*'
@@ -186,8 +196,33 @@ jobs:
       - name: Show runtime assets
         run: find native/runtimes -type f | sort
 
+      - name: Resolve package version
+        shell: bash
+        run: |
+          version_input="${{ github.event.inputs.package_version }}"
+          resolved_version=""
+
+          if [[ -n "${version_input}" ]]; then
+            resolved_version="${version_input}"
+          elif [[ "${GITHUB_REF}" == refs/tags/v* ]]; then
+            resolved_version="${GITHUB_REF_NAME#v}"
+          fi
+
+          echo "PACKAGE_VERSION=${resolved_version}" >> "${GITHUB_ENV}"
+          if [[ -n "${resolved_version}" ]]; then
+            echo "Using package version: ${resolved_version}"
+          else
+            echo "Using package version from project file."
+          fi
+
       - name: Pack
-        run: ./eng/pack.sh
+        shell: bash
+        run: |
+          if [[ -n "${PACKAGE_VERSION}" ]]; then
+            ./eng/pack.sh -p:Version="${PACKAGE_VERSION}"
+          else
+            ./eng/pack.sh
+          fi
 
       - name: Upload package artifacts
         uses: actions/upload-artifact@v4
@@ -197,7 +232,7 @@ jobs:
           if-no-files-found: error
 
       - name: Publish to NuGet
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish_to_nuget == 'true')
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
         run: |
